<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypeset="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>onrobot_driver</name>
  <version>1.0.0</version>
  <description>ROS2 Python driver for OnRobot grippers via Compute Box</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  
  <!-- Add hardware interface dependencies -->
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>controller_interface</depend>
  
  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <!-- Python dependencies -->
  <exec_depend>python3-pip</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>