<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypeset="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>onrobot_driver</name>
  <version>1.0.0</version>
  <description>ROS2 Python driver for OnRobot grippers via Compute Box</description>
  <maintainer email="gabriel.novas@aimen.es">Gabriel Novas</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  
  <!-- ROS2 Control dependencies -->
  <depend>controller_manager</depend>
  
  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>pytest</test_depend>
  <test_depend>pytest-cov</test_depend>
  <test_depend>pytest-mock</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>